Fix: Luquitas arreglo el error del overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
-html, body, #root {
+html,
+body,
+#root {
   margin: 0;
   padding: 0;
   height: 100%;
@@ -9,7 +11,9 @@ html, body, #root {
 .App {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .App-header {
